tests/NormalTests/paczka1/fuzzy1/44843654.err
Error in line 7: 2Quw3Jr A452 11,0
Error in line 18: FCr S240 5,85
Error in line 24: 43Wy A452 64,30
Error in line 27: 2Quw3Jr A72 67,09
Error in line 25: 2Quw3Jr A72 42,7
Error in line 13: vJi A72 70,0
